# Zlagoda

./: .env.sample  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py  db.py  dependencies.py  main.py  security.py
app/queries/: category.py  check.py  customer_card.py  employee.py  product.py  store_product.py
app/routers/: auth.py  category.py  check.py  customer_card.py  employee.py  product.py  store_product.py
app/schemas/: check.py  customer_card.py  employee.py  product.py  store_product.py
app/scripts/: seed.py
app/static/: styles.css
app/templates/: _category_row.html  _customer_card_row.html  _employee_row.html  _product_row.html  _store_product_row.html  base.html  categories.html  category_edit.html  category_list.html  category_new.html  category_print.html  category_values.html  check_detail.html  customer_card_edit.html  customer_card_list.html  customer_card_new.html  customer_print.html  edit_category.html  employee_detail.html  employee_edit.html  employee_list.html  employee_new.html  employee_print.html  error.html  login.html  my_checks.html  new_category.html  print_base.html  product_edit.html  product_list.html  product_new.html  product_print.html  promo_only_cashiers.html  report_all.html  report_by_cashier.html  report_categories_all_sold.html  report_print.html  report_product.html  report_product_print.html  report_sales_by_cashier.html  (+8 more)
sql/: dump.sql  init.sql
