[project]
name = "zlagoda"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.31",
    "uvicorn[standard]>=0.49.0",
]
